[package]
name = "dioxus-table"
version = "0.1.0"
edition = "2021"
authors = ["Maccesch"]
license-file = "LICENSE"
description = "Make data-driven table rendering easy with Dioxus"
repository = "https://github.com/Synphonyte/dioxus-table"
readme = "README.md"
keywords = ["dioxus", "table", "rendering", "front-end", "ui", "gui", "wasm"]

[dependencies]
dioxus-table-macro = { path = "dioxus-table-macro", version = "^0.1.1" }
dioxus = "0.2.4"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
    "dioxus-table-macro"
]