[package]
name = "dioxus-table-macro"
version = "0.1.1"
edition = "2021"
authors = ["Maccesch"]
license-file = "../LICENSE"
description = "Make data-driven table rendering easy with Dioxus - macro crate"
repository = "https://github.com/Synphonyte/dioxus-table"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"
darling = "0.13.1"
heck = "0.4.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
