[package]
name = "hotels"
version = "0.1.0"
edition = "2021"
authors = ["Maccesch <maccesch@synphonyte.com>"]
publish = false

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router", "fermi"] }
gloo-net = { version = "0.2.0", features = ["http", "json"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
wasm-bindgen-futures = "0.4.1"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
heck = "0.4.0"
dioxus-table = { path = "../.." }
web-sys = { version = "0.3.0", features = ["console"] }
derive_more = "0.99.17"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[workspace]